[package]
name = "regional-image"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.2.3"
ip2location = "0.1.2"
anyhow = "1.0.43"
tracing = "0.1"
tracing-subscriber = "0.2"